--- a/package.json
+++ b/package.json
@@ -50,14 +50,14 @@
     "build": "run-s --silent clean lint build:*",
     "test:10": "c8 ava",
     "test": "run-s --silent build \"test:10 {@}\" --",
-    "post:test:10": "git add coverage distributable",
-    "post:test:20": "git commit --message=\"post-test\"",
-    "post:test": "run-s --silent test post:test:*",
     "run:10": "node --no-warnings --unhandled-rejections=strict",
     "run": "run-s build \"run:10 {@}\" --",
+    "pre:push:10": "git add coverage distributable",
+    "pre:push:20": "git commit --message=\"post-test\"",
+    "pre:push": "run-s --silent test pre:push:*",
     "push:10": "npm version prerelease",
     "push:20": "git push origin master",
-    "push": "run-s --silent post:test push:*"
+    "push": "run-s --silent pre:push push:*"
   },
   "version": "0.0.1-1",
   "devDependencies": {
