--- a/.depcheckrc.json
+++ b/.depcheckrc.json
@@ -1,9 +1,16 @@
 {
   "ignores": [
     "@babel/*",
-    "@virtualpatterns/mablung-*",
-    "babel-*",
-    "eslint-*",
+    "@virtualpatterns/mablung-source-map-support",
+    "@virtualpatterns/mablung-babel-plugin-*",
     "html-to-vdom"
+  ],
+  "parsers": {
+    "*.cjs": [ "es6" ],
+    "*.js": [ "es6" ]
+  },
+  "specials": [
+    "bin",
+    "eslint"
   ]
 }
