--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
       "--no-warnings",
       "--unhandled-rejections=strict"
     ],
-    "require": [],
+    "require": [
+      "@virtualpatterns/mablung-source-map-support/install"
+    ],
     "verbose": true
   },
   "c8": {
@@ -21,9 +23,7 @@
     ]
   },
   "description": "TBD",
-  "exports": {
-    ".": "./distributable/index.js"
-  },
+  "exports": "./distributable/index.js",
   "license": "GPL-3.0+",
   "main": "distributable/index.js",
   "name": "@virtualpatterns/parcel-plugin-virtual-pug",
@@ -42,45 +42,52 @@
     "upgrade:30": "npm install",
     "upgrade": "run-s upgrade:*",
     "clean:10": "shx rm -Rf coverage distributable process",
-    "clean": "run-s --silent clean:*",
+    "clean": "run-s clean:*",
     "lint:10": "eslint --ignore-path .gitignore source",
     "lint:20": "depcheck",
-    "lint": "run-s --silent lint:*",
-    "build:10": "babel source --copy-files --extensions .js,.mjs --keep-file-extension --out-dir distributable --source-maps",
-    "build": "run-s --silent clean lint build:*",
+    "lint": "run-s lint:*",
+    "build:10": "cross-env NODE_ENV=commonjs babel source --copy-files --extensions .cjs --keep-file-extension --out-dir distributable --source-maps",
+    "build:20": "cross-env NODE_ENV=esmodule babel source              --extensions .js  --keep-file-extension --out-dir distributable --source-maps",
+    "build": "run-s clean lint build:*",
     "test:10": "c8 ava",
-    "test": "run-s --silent build \"test:10 {@}\" --",
+    "test": "run-s build \"test:10 {@}\" --",
     "run:10": "node --no-warnings --unhandled-rejections=strict",
     "run": "run-s build \"run:10 {@}\" --",
     "pre:push:10": "git add coverage distributable",
     "pre:push:20": "git commit --message=\"post-test\"",
-    "pre:push": "run-s --silent test pre:push:*",
+    "pre:push": "run-s test pre:push:*",
     "push:10": "npm version prerelease",
     "push:20": "git push origin master",
-    "push": "run-s --silent pre:push push:*"
+    "push": "run-s pre:push push:*"
   },
+  "type": "module",
   "version": "0.0.1-1",
   "devDependencies": {
     "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.10.5",
+    "@babel/core": "^7.11.0",
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
-    "ava": "^3.10.1",
+    "@babel/plugin-syntax-import-meta": "^7.10.4",
+    "@babel/preset-env": "^7.11.0",
+    "@virtualpatterns/mablung-babel-plugin-replace-identifier": "git+https://github.com/virtualpatterns/mablung-babel-plugin-replace-identifier",
+    "@virtualpatterns/mablung-source-map-support": "git+https://github.com/virtualpatterns/mablung-source-map-support.git",
+    "ava": "^3.11.0",
     "babel-eslint": "^10.1.0",
     "c8": "^7.2.1",
+    "cross-env": "^7.0.2",
     "depcheck": "^1.0.0",
-    "eslint": "^7.5.0",
+    "eslint": "^7.6.0",
     "eslint-plugin-babel": "^5.3.1",
     "npm-check-updates": "^7.0.2",
     "npm-run-all": "^4.1.5",
     "pretty": "^2.0.0",
     "pug": "^3.0.0",
-    "shx": "^0.3.2",
-    "source-map-support": "^0.5.19"
+    "shx": "^0.3.2"
   },
   "dependencies": {
-    "@virtualpatterns/mablung-virtual-pug": "git+https://github.com/virtualpatterns/mablung-virtual-pug.git",
+    "@virtualpatterns/mablung-virtual-pug": "git+https://github.com/virtualpatterns/mablung-virtual-pug",
+    "fs-extra": "^9.0.1",
     "html-to-vdom": "^0.7.0",
+    "json5": "^2.1.3",
     "parcel-bundler": "^1.12.4",
     "virtual-dom": "^2.1.1"
   }
