re-add --silent, export package, implement check-dependency

--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     ]
   },
   "description": "TBD",
-  "exports": "./distributable/index.js",
+  "exports": {
+    ".": "./distributable/index.js",
+    "./package.json": "./package.json"
+  },
   "license": "GPL-3.0+",
   "main": "distributable/index.js",
   "name": "@virtualpatterns/parcel-plugin-virtual-pug",
@@ -36,48 +39,48 @@
     "refresh:20": "shx rm -Rf node_modules",
     "refresh:30": "npm cache clean --force",
     "refresh:40": "npm install",
-    "refresh": "run-s refresh:*",
+    "refresh": "run-s --silent refresh:*",
     "upgrade:10": "npm-check-updates --upgrade",
     "upgrade:20": "shx rm -f package-lock.json",
     "upgrade:30": "npm install",
-    "upgrade": "run-s upgrade:*",
+    "upgrade": "run-s --silent upgrade:*",
     "clean:10": "shx rm -Rf coverage distributable process",
-    "clean": "run-s clean:*",
+    "clean": "run-s --silent clean:*",
     "lint:10": "eslint --ignore-path .gitignore source",
-    "lint:20": "depcheck",
-    "lint": "run-s lint:*",
+    "lint:20": "check-dependency",
+    "lint": "run-s --silent lint:*",
     "build:10": "cross-env NODE_ENV=commonjs babel source --copy-files --extensions .cjs --keep-file-extension --out-dir distributable --source-maps",
     "build:20": "cross-env NODE_ENV=esmodule babel source              --extensions .js  --keep-file-extension --out-dir distributable --source-maps",
-    "build": "run-s clean lint build:*",
+    "build": "run-s --silent clean lint build:*",
     "test:10": "c8 ava",
-    "test": "run-s build \"test:10 {@}\" --",
+    "test": "run-s --silent build \"test:10 {@}\" --",
     "run:10": "node --no-warnings --unhandled-rejections=strict",
-    "run": "run-s build \"run:10 {@}\" --",
+    "run": "run-s --silent build \"run:10 {@}\" --",
     "pre:push:10": "git add coverage distributable",
     "pre:push:20": "git commit --message=\"post-test\"",
-    "pre:push": "run-s test pre:push:*",
+    "pre:push": "run-s --silent test pre:push:*",
     "push:10": "npm version prerelease",
     "push:20": "git push origin master",
-    "push": "run-s pre:push push:*"
+    "push": "run-s --silent pre:push push:*"
   },
   "type": "module",
   "version": "0.0.1-2",
   "devDependencies": {
     "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.0",
+    "@babel/core": "^7.11.1",
     "@babel/plugin-proposal-export-default-from": "^7.10.4",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
     "@babel/preset-env": "^7.11.0",
     "@virtualpatterns/mablung-babel-plugin-replace-identifier": "git+https://github.com/virtualpatterns/mablung-babel-plugin-replace-identifier",
+    "@virtualpatterns/mablung-check-dependency": "git+https://github.com/virtualpatterns/mablung-check-dependency",
     "@virtualpatterns/mablung-source-map-support": "git+https://github.com/virtualpatterns/mablung-source-map-support.git",
-    "ava": "^3.11.0",
+    "ava": "^3.11.1",
     "babel-eslint": "^10.1.0",
-    "c8": "^7.2.1",
+    "c8": "^7.3.0",
     "cross-env": "^7.0.2",
-    "depcheck": "^1.0.0",
     "eslint": "^7.6.0",
     "eslint-plugin-babel": "^5.3.1",
-    "npm-check-updates": "^7.0.2",
+    "npm-check-updates": "^7.0.4",
     "npm-run-all": "^4.1.5",
     "pretty": "^2.0.0",
     "pug": "^3.0.0",
